minor hover and spacing fixes

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -34,9 +34,10 @@ body {
     font-variant: normal; 
 }
 
-.font-small-review > * {
+.font-small-review, .font-small-review > * {
     font-size: .8rem
 }
+
 
 .temp5-h1 {
 
@@ -446,12 +447,26 @@ body {
     text-decoration: none;    
     &:hover {
         background-color: white;
-        color: #c5c5c5;
+        color: #545c67;
         display: inline-block;
         border: 2px #c5c5c5 solid        
     }
 }
 
+.profile-btn {
+    color: white;
+    background-color: transparent;
+    background-image: none;
+    border-color: #f8f9fa; 
+    padding: .5rem 3rem;
+    display: inline-block;
+    &:hover {
+        background-color: white;
+        border:1px  #c5c5c5 solid;
+        color: #545c67;
+        display: inline-block;
+    }       
+}
 
 
 @include breakpoint(sm) {
@@ -507,8 +522,10 @@ body {
 
                 p {
                     margin: 0;
-                    font-weight: 600;
+                    font-weight: bolder;
                     color: #4f5051;
+                    font-style: italic;
+                    font-size: 1.01rem;
                 }
 
                 img {
@@ -518,7 +535,7 @@ body {
             }
             .rc-body {
                 .title {
-                    color: #02afce;
+                    color: #ffc64d;
                     margin-bottom: 0.25rem;
                 }
                 .description {
